<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/setting_version"
        app:layout_constraintBottom_toTopOf="@id/tv_entire_alarm"
        app:layout_constraintEnd_toStartOf="@id/version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_entire_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_version"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_entire_alarm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/setting_entire_alarm"
        app:layout_constraintBottom_toTopOf="@id/tv_weekend_alarm"
        app:layout_constraintEnd_toStartOf="@id/entire_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_version" />

    <Switch
        android:id="@+id/entire_alarm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_weekend_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_entire_alarm"
        app:layout_constraintTop_toBottomOf="@id/tv_version" />

    <TextView
        android:id="@+id/tv_weekend_alarm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/setting_weekend_alarm"
        app:layout_constraintBottom_toTopOf="@id/alarm_type"
        app:layout_constraintEnd_toStartOf="@id/weekend_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_entire_alarm" />

    <Switch
        android:id="@+id/weekend_alarm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/alarm_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_weekend_alarm"
        app:layout_constraintTop_toBottomOf="@id/tv_entire_alarm" />

    <TextView
        android:id="@+id/alarm_type"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/setting_alarm_type"
        app:layout_constraintBottom_toTopOf="@id/tv_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weekend_alarm" />

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/setting_notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarm_type" />

    <Switch
        android:id="@+id/notification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_notification"
        app:layout_constraintTop_toBottomOf="@id/alarm_type" />


</androidx.constraintlayout.widget.ConstraintLayout>